[package]

name = "hpack-patched"
version = "0.3.0"
authors = ["Marko Lalic <marko.lalic@gmail.com>"]

exclude = [
    "fixtures/*",
]

description = "A library implementing HPACK coding. Patched from the original crate."
repository = "https://github.com/sno2/hpack-rs-patched"
homepage = "https://github.com/sno2/hpack-rs-patched"
readme = "README.md"
license = "MIT"
keywords = ["hpack", "http2", "encoding", "decoding"]
documentation = "https://mlalic.github.io/hpack-rs/hpack/index.html"

[features]

# A feature defining some interop tests between the HPACK decoder and
# headers encoded by other libraries. It is only ever used in test builds!
interop_tests = ["rustc-serialize"]

[dependencies]
log = "^0.3"

[dependencies.rustc-serialize]
version = "^0.3"
optional = true
